// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Status badge combinations - snapshots > snapshots all unique codicon names used 1`] = `
{
  "combined": [
    "check",
    "clock",
    "code",
    "error",
    "hand",
    "hubot",
    "loading~spin",
    "sync~spin",
    "terminal",
    "wand",
  ],
  "kindIcons": [
    "clock",
    "code",
    "hand",
    "hubot",
    "terminal",
    "wand",
  ],
  "statusIcons": [
    "check",
    "error",
    "hand",
    "loading~spin",
    "sync~spin",
  ],
}
`;

exports[`Status badge combinations - snapshots > snapshots complete status/kind matrix 1`] = `
{
  "kinds": [
    {
      "icon": "code",
      "kind": "node",
    },
    {
      "icon": "hubot",
      "kind": "agent",
    },
    {
      "icon": "wand",
      "kind": "skill",
    },
    {
      "icon": "hand",
      "kind": "breakpoint",
    },
    {
      "icon": "terminal",
      "kind": "shell",
    },
    {
      "icon": "clock",
      "kind": "sleep",
    },
  ],
  "statuses": [
    {
      "icon": "sync~spin",
      "status": "pending",
      "withBreakpoint": null,
      "withTask": null,
    },
    {
      "icon": "loading~spin",
      "status": "waiting",
      "withBreakpoint": "hand",
      "withTask": "loading~spin",
    },
    {
      "icon": "check",
      "status": "completed",
      "withBreakpoint": null,
      "withTask": null,
    },
    {
      "icon": "error",
      "status": "failed",
      "withBreakpoint": null,
      "withTask": null,
    },
  ],
}
`;

exports[`getKindIcon - snapshots > snapshots agent task icon 1`] = `"hubot"`;

exports[`getKindIcon - snapshots > snapshots all TaskKind icons 1`] = `
[
  {
    "icon": "code",
    "kind": "node",
  },
  {
    "icon": "hubot",
    "kind": "agent",
  },
  {
    "icon": "wand",
    "kind": "skill",
  },
  {
    "icon": "hand",
    "kind": "breakpoint",
  },
  {
    "icon": "terminal",
    "kind": "shell",
  },
  {
    "icon": "clock",
    "kind": "sleep",
  },
]
`;

exports[`getKindIcon - snapshots > snapshots breakpoint task icon 1`] = `"hand"`;

exports[`getKindIcon - snapshots > snapshots node task icon 1`] = `"code"`;

exports[`getKindIcon - snapshots > snapshots shell task icon 1`] = `"terminal"`;

exports[`getKindIcon - snapshots > snapshots skill task icon 1`] = `"wand"`;

exports[`getKindIcon - snapshots > snapshots sleep task icon 1`] = `"clock"`;

exports[`getKindIcon - snapshots > snapshots unknown task kind fallback 1`] = `"circle-outline"`;

exports[`getStatusIcon - snapshots > snapshots all RunStatus icons 1`] = `
[
  {
    "icon": "sync~spin",
    "label": "pending",
    "status": "pending",
    "waitingKind": undefined,
  },
  {
    "icon": "hand",
    "label": "waiting-breakpoint",
    "status": "waiting",
    "waitingKind": "breakpoint",
  },
  {
    "icon": "loading~spin",
    "label": "waiting-task",
    "status": "waiting",
    "waitingKind": "task",
  },
  {
    "icon": "loading~spin",
    "label": "waiting-no-kind",
    "status": "waiting",
    "waitingKind": undefined,
  },
  {
    "icon": "check",
    "label": "completed",
    "status": "completed",
    "waitingKind": undefined,
  },
  {
    "icon": "error",
    "label": "failed",
    "status": "failed",
    "waitingKind": undefined,
  },
]
`;

exports[`getStatusIcon - snapshots > snapshots completed status icon 1`] = `"check"`;

exports[`getStatusIcon - snapshots > snapshots failed status icon 1`] = `"error"`;

exports[`getStatusIcon - snapshots > snapshots pending status icon 1`] = `"sync~spin"`;

exports[`getStatusIcon - snapshots > snapshots unknown status fallback 1`] = `"circle-outline"`;

exports[`getStatusIcon - snapshots > snapshots waiting status icon with breakpoint 1`] = `"hand"`;

exports[`getStatusIcon - snapshots > snapshots waiting status icon with task 1`] = `"loading~spin"`;

exports[`getStatusIcon - snapshots > snapshots waiting status icon without kind 1`] = `"loading~spin"`;
